--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-  - assets/Earth.jpg
+  assets:
+    - assets/images/earth.jpg
+    - assets/images/postit.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
